--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "truffle-config.js",
   "repository": "git@gitlab.com:audacity-dao/investment-fund-dao.git",
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.4",
     "ganache-cli": "^6.8.2",
     "truffle": "^5.1.10"
   },
