Setup artifacts submodule + added dev notes + testnet console script + changed build dir

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compile": "./scripts/start-ganache.sh && truffle compile",
     "test": "./scripts/start-ganache.sh && truffle test",
     "testnet": "./scripts/start-ganache.sh && truffle migrate --reset --network ropsten",
+    "testnet-console": "./scripts/start-ganache.sh && truffle console --network ropsten",
     "mainnet": "./scripts/start-ganache.sh && truffle migrate --network mainnet",
     "clean": "./scripts/clean.sh"
   }
