--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@openzeppelin/contracts": "^3.0.0-beta.0",
     "@openzeppelin/test-helpers": "^0.5.4",
     "@truffle/hdwallet-provider": "^1.0.32",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "dotenv": "^8.2.0",
     "ganache-cli": "^6.8.2",
     "truffle": "^5.1.10"
