--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "truffle-config.js",
   "repository": "git@gitlab.com:audacity-dao/investment-fund-dao.git",
   "devDependencies": {
-    "@openzeppelin/contracts": "^3.0.0-beta.0",
+    "@openzeppelin/contracts": "^3.1.0",
     "@openzeppelin/test-helpers": "^0.5.4",
     "@truffle/hdwallet-provider": "^1.0.32",
     "babel-polyfill": "^6.26.0",
@@ -21,13 +21,11 @@
     "winston": "^3.3.3"
   },
   "scripts": {
-    "init": "truffle init",
     "compile": "./scripts/start-ganache.sh && truffle compile",
     "test": "./scripts/start-ganache.sh && truffle test",
     "testnet-migrate": "./scripts/start-ganache.sh && truffle migrate --reset --network ropsten",
     "testnet-console": "./scripts/start-ganache.sh && truffle console --network ropsten",
     "mainnet-migrate": "./scripts/start-ganache.sh && truffle migrate --network mainnet",
-    "abi-extract": "node ./scripts/abi-extract.js -v -a artifacts/contracts/Pollen.json -a artifacts/contracts/PollenDAO.json",
     "clean": "./scripts/clean.sh"
   }
 }
