--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "repository": "git@gitlab.com:audacity-dao/investment-fund-dao.git",
   "devDependencies": {
     "@openzeppelin/contracts": "^3.1.0",
+    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@openzeppelin/test-helpers": "^0.5.4",
     "@truffle/hdwallet-provider": "^1.0.32",
     "babel-polyfill": "^6.26.0",
