--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "winston": "^3.3.3"
   },
   "scripts": {
-    "compile": "./scripts/start-ganache.sh && truffle compile",
+    "compile": "truffle compile",
     "test": "./scripts/start-ganache.sh && yarn clean && truffle compile && truffle test",
-    "testnet-migrate": "./scripts/start-ganache.sh && truffle migrate --reset --network ropsten",
-    "testnet-console": "./scripts/start-ganache.sh && truffle console --network ropsten",
-    "mainnet-migrate": "./scripts/start-ganache.sh && truffle migrate --network mainnet",
+    "interact": "oz call",
+    "migrate:ropsten": "truffle migrate --reset --network ropsten",
+    "console:ropsten": "truffle console --network ropsten",
+    "migrate:mainnet": "truffle migrate --network mainnet",
+    "console:mainnet": "truffle console --network mainnet",
     "clean": "./scripts/clean.sh"
   }
 }
