--- a/.openzeppelin/project.json
+++ b/.openzeppelin/project.json
@@ -1,17 +1,26 @@
 {
   "manifestVersion": "2.2",
   "contracts": {
-    "PollenDAO": "PollenDAO_v1"
+    "PollenDAO": "PollenDAO_v1",
+    "Pollen": "Pollen_v1"
   },
   "dependencies": {},
   "name": "pollen-dao",
   "version": "1.0.0",
   "compiler": {
     "compilerSettings": {
-      "optimizer": {}
+      "optimizer": {
+        "enabled": false,
+        "runs": "200"
+      }
     },
     "typechain": {
       "enabled": false
-    }
-  }
+    },
+    "manager": "openzeppelin",
+    "solcVersion": "0.6.12",
+    "artifactsDir": "build/contracts",
+    "contractsDir": "contracts"
+  },
+  "telemetryOptIn": false
 }
