--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "ganache-cli": "^6.8.2",
     "lodash": "^4.17.20",
