OZ project params minor tweak

--- a/.openzeppelin/project.json
+++ b/.openzeppelin/project.json
@@ -27,9 +27,10 @@
   "compiler": {
     "compilerSettings": {
       "optimizer": {
-        "enabled": false,
+        "enabled": true,
         "runs": "200"
-      }
+      },
+      "evmVersion": "istanbul"
     },
     "typechain": {
       "enabled": false
