--- a/.openzeppelin/project.json
+++ b/.openzeppelin/project.json
@@ -3,23 +3,30 @@
   "contracts": {
     "Pollen": "Pollen_v1",
     "PollenDAO": "PollenDAO_v1",
+    "MockPriceOracle": "MockPriceOracle",
+    "MockAssetToken": "MockAssetToken",
     "RateQuoter": "RateQuoter"
   },
   "_comments_": "!!! please leave 'contracts' property empty (to let migration scripts set it on runtime)",
   "_contracts_": {
     "pln-chain": {
       "Pollen": "Pollen_v1",
-      "PollenDAO": "PollenDAO_v1"
+      "PollenDAO": "PollenDAO_v1",
+      "MockPriceOracle": "MockPriceOracle",
+      "MockAssetToken": "MockAssetToken",
+      "RateQuoter": "RateQuoter"
     },
     "ropsten": {
       "Pollen": "Pollen_v1",
       "PollenDAO": "PollenDAO_v1",
       "MockPriceOracle": "MockPriceOracle",
-      "MockAssetToken": "MockAssetToken"
+      "MockAssetToken": "MockAssetToken",
+      "RateQuoter": "RateQuoter"
     },
     "mainnet": {
       "Pollen": "Pollen_v1",
-      "PollenDAO": "PollenDAO_v1"
+      "PollenDAO": "PollenDAO_v1",
+      "RateQuoter": "RateQuoter"
     }
   },
   "dependencies": {},
